# advent-of-code-2024

./: LICENSE  Makefile  README.md
day01/: gleam.toml
day01/src/: day01.gleam
day02/: day02.opam  dune-project
day02/lib/: CheckedPair.ml
day03/: day03.rkt
